example/refs.co
fun main(arg1 int) int
  x = &arg1 // mut&int
  y = &arg1 // mut&int
  a = *x    // int
  b = *y    // int
  // y = *arg1 // error: cannot dereference non-reference type int
  a + b
